# argdigest

./: .buildinfo  .coveragerc  .gitignore  ARG_DIGEST_AGENTS.md  ArgDigest_SPEC_v0.1-draft.md  DEVELOPER_GUIDE.md  README.md  ROADMAP.md  SMONITOR_GUIDE.md  SPEC.md  argdigest.contrib.html  argdigest.core.html  argdigest.html  argdigest.pipelines.html  genindex.html  index.html  mini-spec.md  modules.html  notes_dev.md  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tests.html  tests.mock_molsysmt.html
_modules/: index.html
_sources/: argdigest.contrib.rst.txt  argdigest.core.rst.txt  argdigest.pipelines.rst.txt  argdigest.rst.txt  modules.rst.txt  tests.mock_molsysmt.rst.txt  tests.rst.txt
api/: index.html
argdigest/: __init__.py  _depdigest.py  _smonitor.py  cli.py  config.py
argdigest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
devguide/: 0.6.x_checklist.md  0.7.x_checklist.md  0.8.0_release_notes_draft.md  0.8.x_checklist.md  0.9.0_release_notes_draft.md  0.9.1_release_notes_draft.md  0.9.2_release_notes_draft.md  0.9.x_checklist.md  1.0.0_checklist.md  1.0.0_go_no_go_pack.md  1.0.0_release_notes_and_migration_summary.md  DEVELOPER_GUIDE.md  ROADMAP.md  collective_evidence_pack.md  index.md  notes_dev.md  smonitor.md
devtools/: README.md
docs/: Makefile  conf.py  index.md
standards/: ARGDIGEST_GUIDE.md
tests/: conftest.py  test_api_contract.py  test_api_reference_contract.py  test_argument_digestion.py  test_argument_loader_order.py  test_beartype.py  test_bind_arguments.py  test_block_c_validation_semantics.py  test_block_d_performance_reliability.py  test_block_f_cross_layer.py  test_caller_helpers.py  test_cli.py  test_cli_additional.py  test_compatibility_matrix.py  test_config_file.py  test_config_precedence_env.py  test_contrib.py  test_core_config_additional.py  test_data_pipelines.py  test_decorator.py  test_decorator_additional.py  (+19 more)
(+240 files in other folders)
